# PointClasteringTool

./: .gitignore  .gitmodules  README.md
config/: config.ini  log4cplus.properties
docs/: update_diagrams.sh
docs/activity_diagrams/: clope.plantuml  controller.plantuml  mst.plantuml  mst2.plantuml
docs/class_view/: classes.plantuml  classes_clustering.plantuml  classes_controller.plantuml  classes_pcm.plantuml  classes_statistics.plantuml  classes_view.plantuml
docs/use_case_view/: cases.plantuml
doxygen/: doxy.ini
doxygen/html/: DataManagerImpl_8cpp.html  DataManagerImpl_8cpp__incl.map  DataManagerImpl_8cpp__incl.md5  DataManagerImpl_8hpp.html  DataManagerImpl_8hpp__dep__incl.map  DataManagerImpl_8hpp__dep__incl.md5  DataManagerImpl_8hpp__incl.map  DataManagerImpl_8hpp__incl.md5  DataManagerImpl_8hpp_source.html  DataManager_8cpp.html  DataManager_8cpp__incl.map  DataManager_8cpp__incl.md5  DataManager_8hpp.html  DataManager_8hpp__dep__incl.map  DataManager_8hpp__dep__incl.md5  DataManager_8hpp__incl.map  DataManager_8hpp__incl.md5  DataManager_8hpp_source.html  LifeCycle_8cpp.html  LifeCycle_8cpp__incl.map  LifeCycle_8cpp__incl.md5  LifeCycle_8hpp.html  LifeCycle_8hpp__dep__incl.map  LifeCycle_8hpp__dep__incl.md5  LifeCycle_8hpp__incl.map  LifeCycle_8hpp__incl.md5  LifeCycle_8hpp_source.html  Point_8cpp.html  Point_8hpp.html  Point_8hpp__dep__incl.map  Point_8hpp__dep__incl.md5  Point_8hpp__incl.map  Point_8hpp__incl.md5  Point_8hpp_source.html  QtRenderObject_8cpp.html  QtRenderObject_8cpp__incl.map  QtRenderObject_8cpp__incl.md5  QtRenderObject_8hpp.html  QtRenderObject_8hpp__dep__incl.map  QtRenderObject_8hpp__dep__incl.md5  (+156 more)
doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  namespaces_0.js  pages_0.js  properties_0.js  related_0.js  searchdata.js  (+11 more)
doxygen/latex/: DataManagerImpl_8cpp.tex  DataManagerImpl_8cpp__incl.md5  DataManagerImpl_8hpp.tex  DataManagerImpl_8hpp__dep__incl.md5  DataManagerImpl_8hpp__incl.md5  DataManager_8cpp.tex  DataManager_8cpp__incl.md5  DataManager_8hpp.tex  DataManager_8hpp__dep__incl.md5  DataManager_8hpp__incl.md5  LifeCycle_8cpp.tex  LifeCycle_8cpp__incl.md5  LifeCycle_8hpp.tex  LifeCycle_8hpp__dep__incl.md5  LifeCycle_8hpp__incl.md5  Point_8cpp.tex  Point_8hpp.tex  Point_8hpp__dep__incl.md5  Point_8hpp__incl.md5  QtRenderObject_8cpp.tex  QtRenderObject_8cpp__incl.md5  QtRenderObject_8hpp.tex  QtRenderObject_8hpp__dep__incl.md5  QtRenderObject_8hpp__incl.md5  README_8md.tex  RenderImpl_8cpp.tex  RenderImpl_8cpp__incl.md5  RenderImpl_8hpp.tex  RenderImpl_8hpp__dep__incl.md5  RenderImpl_8hpp__incl.md5  Render_8cpp.tex  Render_8cpp__incl.md5  Render_8hpp.tex  Render_8hpp__dep__incl.md5  Render_8hpp__incl.md5  annotated.tex  app__helper_8hpp.tex  app__helper_8hpp__dep__incl.md5  classDataManager.tex  classDataManagerImpl.tex  (+46 more)
src/: CMakeLists.txt
src/App/: CMakeLists.txt  LifeCycle.cpp  LifeCycle.hpp  main.cpp
src/CloudeControler/: CMakeLists.txt  Controler.cpp  Controler.hpp  ServiceCommunicationDataMeneger.hpp
src/Common/: CMakeLists.txt
src/Common/app_type/: Point.hpp
src/Common/converters/: converters_pcl.cpp  converters_pcl.hpp
src/Common/helper/: app_helper.hpp  communications.hpp
src/Controller/: CMakeLists.txt  controller.cpp  controller.h
src/DataManager/: CMakeLists.txt  DataManager.cpp  DataManager.hpp
src/DataManager/impl/: DataManagerImpl.cpp  DataManagerImpl.hpp
src/DataMeneger/: CMakeLists.txt  DataMeneger.cpp  DataMeneger.hpp
src/DataMeneger/impl/: DataMenegerImpl.cpp  DataMenegerImpl.hpp
src/Model/: CMakeLists.txt
src/Model/Clastering/: AlgorithmCLOPE.h  AlgorithmMST.cpp  AlgorithmMST.h  ClasteringAlgo.h
src/Model/Clustering/: AlgorithmCLOPE.cpp  AlgorithmCLOPE.h  AlgorithmMST.cpp  AlgorithmMST.h  ClusteringAlgo.h
src/Model/Common/: ValueStamp.cpp  ValueStamp.h  cluster.cpp  cluster.h  pointcloud.cpp  pointcloud.h
src/Model/Measurement/: CPUMonitor.cpp  CPUMonitor.h  IOMonitor.cpp  IOMonitor.h  MeasurementTool.cpp  MeasurementTool.h  RAMMonitor.cpp  RAMMonitor.h
src/Model/PointCloudManager/: PointCloudManager.cpp  PointCloudManager.h
src/Model/Settings/: applicationsettings.cpp  applicationsettings.h
src/Model/Statistics/: StatisticsManager.cpp  StatisticsManager.h
src/UI/: CMakeLists.txt  IRender.hpp  Render.cpp  Render.hpp  qmlwrapper.cpp  qmlwrapper.h
src/UI/impl/: QtRenderObject.cpp  QtRenderObject.hpp  RenderImpl.cpp  RenderImpl.hpp  UIWindow.cpp  UIWindow.hpp  cloperunner.cpp  cloperunner.hpp  diagram.cpp  diagram.h  mstrunner.cpp  mstrunner.hpp
src/UI/impl/Resources/: Canvas.qml  Canvas.qmlc  DataPoint.qml  DataPoint.qmlc  main.qml  main.qmlc  qml.qrc
src/UI/impl/forms/: cloperunner.ui  diagram.ui  mstrunner.ui  vtkwindow.ui
